# LossyCompressStudy

SZ_new/: CMakeLists.txt  README.md
SZ_new/example/: sz.config  testdouble_decompress.c
SZ_new/sz/include/: BitHolder.h  FitMethods.h  TightDataPointStorageD.h
SZ_new/sz/src/: TightDataPointStorageD.c  TightDataPointStorageD_pwr.c  sz_double_pwr.c
SZ_new/test/: compression  decompression  sz.config  sz.sh
